--- a/site/index.html
+++ b/site/index.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <h1>
-            Hello Coursera (h1) ! It's a great course :) 
+            Hello Coursera (h1) ! It's a great course !
         </h1>
     </body>
 </html>
